; ModuleID = '/home/carl/AnghaBench/tmux/extr_input.c_input_csi_dispatch_sgr_rgb.c'
source_filename = "/home/carl/AnghaBench/tmux/extr_input.c_input_csi_dispatch_sgr_rgb.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.input_ctx = type { i32 }

@llvm.used = appending global [1 x i8*] [i8* bitcast (void (%struct.input_ctx*, i32, i64*)* @input_csi_dispatch_sgr_rgb to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal void @input_csi_dispatch_sgr_rgb(%struct.input_ctx* %0, i32 %1, i64* %2) #0 {
  %4 = alloca %struct.input_ctx*, align 8
  %5 = alloca i32, align 4
  %6 = alloca i64*, align 8
  %7 = alloca i32, align 4
  %8 = alloca i32, align 4
  %9 = alloca i32, align 4
  store %struct.input_ctx* %0, %struct.input_ctx** %4, align 8
  store i32 %1, i32* %5, align 4
  store i64* %2, i64** %6, align 8
  %10 = load %struct.input_ctx*, %struct.input_ctx** %4, align 8
  %11 = load i64*, i64** %6, align 8
  %12 = load i64, i64* %11, align 8
  %13 = add nsw i64 %12, 1
  %14 = call i32 @input_get(%struct.input_ctx* %10, i64 %13, i32 0, i32 -1)
  store i32 %14, i32* %7, align 4
  %15 = load %struct.input_ctx*, %struct.input_ctx** %4, align 8
  %16 = load i64*, i64** %6, align 8
  %17 = load i64, i64* %16, align 8
  %18 = add nsw i64 %17, 2
  %19 = call i32 @input_get(%struct.input_ctx* %15, i64 %18, i32 0, i32 -1)
  store i32 %19, i32* %8, align 4
  %20 = load %struct.input_ctx*, %struct.input_ctx** %4, align 8
  %21 = load i64*, i64** %6, align 8
  %22 = load i64, i64* %21, align 8
  %23 = add nsw i64 %22, 3
  %24 = call i32 @input_get(%struct.input_ctx* %20, i64 %23, i32 0, i32 -1)
  store i32 %24, i32* %9, align 4
  %25 = load %struct.input_ctx*, %struct.input_ctx** %4, align 8
  %26 = load i32, i32* %5, align 4
  %27 = load i32, i32* %7, align 4
  %28 = load i32, i32* %8, align 4
  %29 = load i32, i32* %9, align 4
  %30 = call i64 @input_csi_dispatch_sgr_rgb_do(%struct.input_ctx* %25, i32 %26, i32 %27, i32 %28, i32 %29)
  %31 = icmp ne i64 %30, 0
  br i1 %31, label %32, label %36

32:                                               ; preds = %3
  %33 = load i64*, i64** %6, align 8
  %34 = load i64, i64* %33, align 8
  %35 = add nsw i64 %34, 3
  store i64 %35, i64* %33, align 8
  br label %36

36:                                               ; preds = %32, %3
  ret void
}

declare dso_local i32 @input_get(%struct.input_ctx*, i64, i32, i32) #1

declare dso_local i64 @input_csi_dispatch_sgr_rgb_do(%struct.input_ctx*, i32, i32, i32, i32) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
